HelloUltraviolet/Fixtures/RejectedSource/Statements/MissingRequiredTerminator/Expected.uv
//! Expected diagnostic metadata for the MissingRequiredTerminator rejected-source specimen.

expectedDiagnostic("E-SRC-0510", "rule.18.ConsumeTerminatorOpt-Req-No")
